--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@
 set-option -g prefix C-t
 # setting namespace for OSX open command
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+# change default terminal emulator
+set -g default-terminal "xterm-256color"
 
 
 ###############
@@ -32,3 +34,5 @@ set-option -g status-right "Pomo:#(cat ~/.pomo_stat) #[fg=colour255,bg=colour241
 set-window-option -g window-status-format " #I: #W "
 # format of window-status on current window
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour130] #I: #W #[default]"
+
+
