--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,11 +9,21 @@ set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 # change default terminal emulator
 set -g default-terminal "xterm-256color"
 
+# vi key bind
+set-window-option -g mode-keys vi
+# copy mode by Prefix+v
+bind-key v copy-mode \; display "Copy Mode"
+# copy by Prefix+y
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# paste by Prefix+p
+bind-key p paste-buffer
 
 ###############
 # status line #
 ###############
 
+# fix statux bar on top
+set-option -g status-position top
 # update status line every 1 sec
 set-option -g status-interval 1
 # make window-status center
@@ -29,10 +39,8 @@ set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
 # max width of status-right 
 set-option -g status-right-length 60
 # format of status-right
-set-option -g status-right "Pomo:#(cat ~/.pomo_stat) #[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
+set-option -g status-right "Pomo:#(cat ~/.pomo|tail -5|head -1)(#(cat ~/.pomo_stat)) #[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
 # format of window-status
 set-window-option -g window-status-format " #I: #W "
 # format of window-status on current window
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour130] #I: #W #[default]"
-
-
