:racehorse: vim like pane movings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,14 +2,25 @@
 #   general   #
 ###############
 
-# prefix
+# prefix C-t
 set-option -g prefix C-t
 # setting namespace for OSX open command
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 # change default terminal emulator
 set -g default-terminal "xterm-256color"
 
-# vi key bind
+
+###############
+#  bindging   #
+###############
+
+##
+# check binds: C-t ?
+
+# reload .tmux.conf C-t r
+bind r source-file ~/.tmux.conf \; display-message "reloaded :)"
+
+# vi copy/yank key bind
 set-window-option -g mode-keys vi
 # copy mode by Prefix+v
 bind-key v copy-mode \; display "Copy Mode"
@@ -17,6 +28,19 @@ bind-key v copy-mode \; display "Copy Mode"
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # paste by Prefix+p
 bind-key p paste-buffer
+
+# move between pains like vim
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# resize a pain like vim
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 
 ###############
 # status line #
