--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,7 @@ set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
 # max width of status-right 
 set-option -g status-right-length 60
 # format of status-right
-set-option -g status-right "Pomo:#(cat ~/.pomo|tail -5|head -1)(#(cat ~/.pomo_stat)) #[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
+set-option -g status-right "Pomo: #(cat ~/.pomo|tail -5|head -1|cut -c9-)(#(cat ~/.pomo_stat)) #[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
 # format of window-status
 set-window-option -g window-status-format " #I: #W "
 # format of window-status on current window
