--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ set-option -g prefix C-t
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 # change default terminal emulator
 set -g default-terminal "xterm-256color"
+# screen saver
+set -g lock-after-time 500
+set -g lock-command "let_it_fall food -s=0.5"
 
 
 ###############
