Keep current directory opening new pain

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,13 @@ set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 # change default terminal emulator
 set -g default-terminal "xterm-256color"
 # screen saver
-set -g lock-after-time 500
-set -g lock-command "let_it_fall food -s=0.5"
+# set -g lock-after-time 1500
+# set -g lock-command "let_it_fall food -s=0.5"
+
+# Keep current directory in new pain
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -hc "#{pane_current_path}"
+bind '"' split-window -vc "#{pane_current_path}"
 
 
 ###############
