--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,12 @@ bind c new-window -c "#{pane_current_path}"
 bind % split-window -hc "#{pane_current_path}"
 bind '"' split-window -vc "#{pane_current_path}"
 
+# Color for pain border
+set -g pane-border-fg colour240 # gray
+set -g pane-border-bg black
+# Emphasize active pain
+set -g pane-active-border-fg colour166 # base orange
+set -g pane-active-border-bg colour242 # orange
 
 ###############
 #  bindging   #
