--- a/tmux.conf
+++ b/tmux.conf
@@ -62,6 +62,9 @@ bind -r L resize-pane -R 5
 
 # fix statux bar on top
 set-option -g status-position top
+# 左右のステータスバーの長さを決定する
+set-option -g status-left-length 90
+set-option -g status-right-length 90
 # update status line every 1 sec
 set-option -g status-interval 1
 # make window-status center
