Add ASCII art for tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,10 @@
+#  ______   __    __     __  __     __  __     ______     ______     __   __     ______
+# /\__  _\ /\ "-./  \   /\ \/\ \   /\_\_\_\   /\  ___\   /\  __ \   /\ "-.\ \   /\  ___\
+# \/_/\ \/ \ \ \-./\ \  \ \ \_\ \  \/_/\_\/_  \ \ \____  \ \ \/\ \  \ \ \-.  \  \ \  __\
+#    \ \_\  \ \_\ \ \_\  \ \_____\   /\_\/\_\  \ \_____\  \ \_____\  \ \_\\"\_\  \ \_\
+#     \/_/   \/_/  \/_/   \/_____/   \/_/\/_/   \/_____/   \/_____/   \/_/ \/_/   \/_/
+
+
 ###############
 #   general   #
 ###############
@@ -73,14 +80,15 @@ set-option -g status-justify "centre"
 set-option -g status-bg "colour238"
 # text color gray
 set-option -g status-fg "colour255"
-# max width of status-left 
+# max width of status-left
 set-option -g status-left-length 20
-# format of status-left 
+# format of status-left
 set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
-# max width of status-right 
+# max width of status-right
 set-option -g status-right-length 60
 # format of status-right
 set-option -g status-right "Pomo: #(cat ~/.pomo|tail -5|head -1|cut -c9-)(#(cat ~/.pomo_stat)) #[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
+# set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
 # format of window-status
 set-window-option -g window-status-format " #I: #W "
 # format of window-status on current window
