--- a/tmux.conf
+++ b/tmux.conf
@@ -15,9 +15,11 @@ set-option -g prefix C-t
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 # change default terminal emulator
 set -g default-terminal "xterm-256color"
+
 # screen saver
-# set -g lock-after-time 1500
-# set -g lock-command "let_it_fall food -s=0.5"
+set -g lock-after-time 1500
+# How's the weather in Tokyo?
+set -g lock-command "curl -sS wttr.in/Tokyo | head -27"
 
 # Keep current directory in new pain
 bind c new-window -c "#{pane_current_path}"
