tmux 2.4から変更された部分を修正

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,7 +48,7 @@ set-window-option -g mode-keys vi
 # copy mode by Prefix+v
 bind-key v copy-mode \; display "Copy Mode"
 # copy by Prefix+y
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t copy-mode y copy-pipe "reattach-to-user-namespace pbcopy"
 # paste by Prefix+p
 bind-key p paste-buffer
 
