--- a/tmux.conf
+++ b/tmux.conf
@@ -27,11 +27,9 @@ bind % split-window -hc "#{pane_current_path}"
 bind '"' split-window -vc "#{pane_current_path}"
 
 # Color for pain border
-set -g pane-border-fg colour240 # gray
-set -g pane-border-bg black
+set -g pane-border-style fg=colour240,bg=black
 # Emphasize active pain
-set -g pane-active-border-fg colour166 # base orange
-set -g pane-active-border-bg colour242 # orange
+set -g pane-active-border-style fg=colour166,bg=colour242
 
 ###############
 #  bindging   #
@@ -48,7 +46,7 @@ set-window-option -g mode-keys vi
 # copy mode by Prefix+v
 bind-key v copy-mode \; display "Copy Mode"
 # copy by Prefix+y
-bind-key -t copy-mode y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t copy-mode y copy-pipe "reattach-to-user-namespace pbcopy"
 # paste by Prefix+p
 bind-key p paste-buffer
 
@@ -79,9 +77,8 @@ set-option -g status-interval 1
 # make window-status center
 set-option -g status-justify "centre"
 # background color gray
-set-option -g status-bg "colour238"
 # text color gray
-set-option -g status-fg "colour255"
+set-option -g status-style bg="colour238",fg="colour255"
 # max width of status-left
 set-option -g status-left-length 20
 # format of status-left
